Edited wiki page FlashFlowFactory through web user interface.

--- a/wiki/FlashFlowFactory.wiki
+++ b/wiki/FlashFlowFactory.wiki
@@ -328,9 +328,20 @@ package
 
 == Page ==
 
+  * `autoShow:Boolean`
+  When enabled, the `show()` function is called onAddedToStage, otherwise you can call `show()` yourself (Useful when you want to load something before showing the page). Default `true`
+		
+  * `pageName:String`
+  Internal page name, auto filled by the `PageFactory`. The pageName reflects the deeplink url, which is set using `SWFAddress`. There is no need to modify this value.
+		
+  * `pageTitle:String;
+  Page title, auto filled by the `PageFactory`. The pageTitle reflects the browser title, which is set using `SWFAddress`. There is no need to modify this value.
+
+  * `settings:PageSettings`
+  Settings from the page. auto filled by the `PageFactory`. All values from these settings can be overwritten. 
+
   * `onAddedToStage(e:Event):void `
     Protected. Overridable method to detect if page is added from stage
-		
 
 		
   * `onRemovedFromStage(e:Event):void `
